src/app/contact/contact.component.scss
.container-fluid{
  width:50%;
}

.form-group{
  margin-left: auto;
  margin-right: auto;
}

.contact-form{
  margin-top: 1rem;
}
.contact-image{
  text-align: center;
  padding-top:40px;
}
.contact-image img{
  border-radius: 6rem;
  width: 10%;
  transform: rotate(29deg);
}
.contact-form form{
  padding-top: 14%;
}
.contact-form h3{
  margin-bottom: 8%;
  margin-top: -10%;
  text-align: center;
  color: #b66a83;
}

.btn-submit{
  margin-top: 1rem;
  padding: 0.5rem 3rem;
  margin-bottom: 2rem;
  margin-left: 1rem;
  background: #b66a83;
  color:white;
}

.btn-submit:hover{
  color: #b66a83;
  background-color: white;
  outline: solid 1px #b66a83;
}
label {
  padding-top: 1.5rem;
}

p {
  margin-left : 1rem;
  color: red;
}

